--- a/Beginner_2/5. Built-in Functions.ipynb
+++ b/Beginner_2/5. Built-in Functions.ipynb
@@ -170,16 +170,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "    "
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "## 5.4 Casting\n",
     "\n",
-    "Sometimes, you may need to perform conversions between the built-in types. To convert between types, you simply use the type name as a function. <b>Casting</b> is when you convert a variable value from one type to another. \n",
+    "Sometimes, you may need to perform conversions between the built-in types. To convert between types, you simply use the type name as a function. __Casting__ is when you convert a variable value from one type to another. \n",
     "\n",
     "There are several built-in functions to perform conversion from one data type to another. These functions return a new object representing the converted value.\n",
     "\n",
@@ -203,7 +196,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "On the example above, we just printed the type of variable <b>`x`</b> which resulted to a string. To convert a string into an integer:"
+    "On the example above, we just printed the type of variable __`x`__ which resulted to a string. To convert a string into an integer:"
    ]
   },
   {
@@ -225,7 +218,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "There's also another very common one which is <b>`float()`</b>:"
+    "There's also another very common one which is __`float()`__:"
    ]
   },
   {
