--- a/Beginner_2/6 Variables.ipynb
+++ b/Beginner_2/6 Variables.ipynb
@@ -34,9 +34,9 @@
    "source": [
     "#### Exercise: \n",
     "\n",
-    "(1) Create a variable named <b>'`c`'</b> and assign the value 'Grapes'\n",
+    "(1) Create a variable named __'`c`'__ and assign the value 'Grapes'\n",
     "\n",
-    "(2) Print <b>`c`</b>"
+    "(2) Print __`c`__"
    ]
   },
   {
@@ -83,7 +83,7 @@
    "source": [
     "## 6.2 Reserved Words\n",
     "\n",
-    "The following identifiers are used as reserved words, or keywords of the language, and <b>cannot</b> be used as ordinary identifiers. They must be spelled exactly as written here:"
+    "The following identifiers are used as reserved words, or keywords of the language, and __cannot__ be used as ordinary identifiers. They must be spelled exactly as written here:"
    ]
   },
   {
@@ -145,6 +145,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## 6.4.1 Re-assigning of Variables"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "Python also allows assignment of multiple variables simultaneously."
    ]
   },
@@ -177,7 +184,7 @@
     "\n",
     "Comparisons yield boolean values: True or False.\n",
     "\n",
-    "Comparisons can be chained arbitrarily, e.g., <b>`x < y <= z`</b> is equivalent to <b>`x < y`</b> and <b>`y <= z`</b>, except that <b>`y`</b> is evaluated only once (but in both cases <b>`z`</b> is not evaluated at all when <b>`x < y`</b> is found to be false).\n",
+    "Comparisons can be chained arbitrarily, e.g., __`x < y <= z`__ is equivalent to __`x < y`__ and __`y <= z`__, except that __`y`__ is evaluated only once (but in both cases __`z`__ is not evaluated at all when __`x < y`__ is found to be false).\n",
     "\n",
     "\n",
     "![Beginner_2](./images/img_comparison_chaining.png)"
@@ -187,36 +194,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 6.6 Re-assigning of Variables"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false,
-    "scrolled": true
-   },
-   "outputs": [],
-   "source": [
-    "int_a = 1\n",
-    "int_a = 2\n",
-    "\n",
-    "\n",
-    "# 1 was originally assigned to int_a.\n",
-    "# What do you think will happen if we reset it to 2 and print it?\n",
-    "# print 'int_a' to find out!\n",
-    "\n",
-    "#Write your code below\n",
-    "\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## 6.7 Data Types\n",
+    "## 6.6 Data Types\n",
     "\n",
     "The data stored in memory can be of many types. For example, a person's age is stored as a numeric value and his or her address is stored as alphanumeric characters. Python has various standard data types that are used to define the operations possible on them and the storage method for each of them.\n",
     "\n",
@@ -234,17 +212,17 @@
     " \n",
     "\n",
     "### [Mutable vs. Immutable](http://codehabitude.com/2013/12/24/python-objects-mutable-vs-immutable/)\n",
-    "Before having a brief introduction of the data types, let me explain first the difference between <b>mutable</b> and <b>immutable</b>.\n",
+    "Before having a brief introduction of the data types, let me explain first the difference between __mutable__ and __immutable__.\n",
     "\n",
     "### Mutable\n",
-    "Objects that can be altered or changed. The following are mutable objects −\n",
+    "Objects that can be altered or changed. The following are mutable objects:\n",
     "- list\n",
     "- dict\n",
     "- set\n",
     "- byte array\n",
     "\n",
     "### Immutable\n",
-    "Objects that cannot be altered nor changed. The following are immutable objects −\n",
+    "Objects that cannot be altered nor changed. The following are immutable objects:\n",
     "- Numeric types: int, float, complex\n",
     "- string\n",
     "- tuple\n",
@@ -279,7 +257,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Python supports four different numerical types −\n",
+    "Python supports four different numerical types:\n",
     "\n",
     " - int (signed integers)\n",
     "\n",
@@ -299,7 +277,7 @@
     "- Python allows you to use a lowercase L with long, but it is recommended that you use only an uppercase L to avoid confusion with the number 1. Python displays long integers with an uppercase L.\n",
     "\n",
     "\n",
-    "- A complex number consists of an ordered pair of real floating-point numbers denoted by <b>`x + yj`</b>, where <b>`x`</b> and <b>`y`</b> are the real numbers and <b>`j`</b> is the imaginary unit."
+    "- A complex number consists of an ordered pair of real floating-point numbers denoted by __`x + yj`__, where __`x`__ and __`y`__ are the real numbers and __`j`__ is the imaginary unit."
    ]
   },
   {
@@ -331,7 +309,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "- Subsets of an [iterable](https://wiki.python.org/moin/Iterator) can be taken using the slice operator (__`[ : ]`__) with indexes starting at 0 in the beginning of the string and working their way to -1 at the end. Strings, as well as lists, and sets are subscriptable iterables. Slicing creates copies of them.\n",
+    "- Subsets of an [iterable](https://wiki.python.org/moin/Iterator) can be taken using the slice operator (__`[:]`__) with indexes starting at 0 in the beginning of the string and working their way to -1 at the end. Strings, as well as lists, and sets are subscriptable iterables. Slicing creates copies of them. We'll take a deeper look at slicing later in lists.\n",
     "\n",
     "For example:"
    ]
@@ -362,7 +340,7 @@
     "collapsed": true
    },
    "source": [
-    "- The plus ( <b>`+`</b> ) sign is the string concatenation operator and the asterisk ( <b>`*`</b> ) is the repetition operator. \n",
+    "- The plus (__`+`__) sign is the string concatenation operator and the asterisk (__`*`__) is the repetition operator. \n",
     "\n",
     "For example:"
    ]
@@ -390,7 +368,7 @@
    "source": [
     "### 3. List (mutable)\n",
     "\n",
-    "Lists are the most versatile of Python's compound data types. A list contains items separated by commas and enclosed within square brackets ( <b>`[ ]`</b> ).\n",
+    "Lists are the most versatile of Python's compound data types. A list contains items separated by commas and enclosed within square brackets (__`[]`__).\n",
     "\n",
     "To some extent, lists are similar to arrays in C. One difference between them is that all the items belonging to a list can be of different data type.\n",
     "\n",
@@ -417,7 +395,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The values stored in a list can be accessed using the slice operator (<b>`[  ]`</b> and <b>`[ : ]`</b>) with indexes starting at 0 in the beginning of the list and working their way to end -1. The plus ( <b>`+`</b> ) sign is the list concatenation operator, and the asterisk ( <b>`*`</b> ) is the repetition operator. \n",
+    "The values stored in a list can be accessed using the slice operator (__`[:]`__) with indexes starting at 0 in the beginning of the list and working their way to end -1. The plus (__`+`__) sign is the list concatenation operator, and the asterisk (__`*`__) is the repetition operator. \n",
     "\n",
     "For example:"
    ]
@@ -453,7 +431,7 @@
     "A tuple is another sequence data type that is similar to the list. A tuple consists of a number of values separated by commas. Unlike lists, however, tuples are enclosed within parentheses.\n",
     "\n",
     "\n",
-    "The main differences between lists and tuples are: Lists are enclosed in brackets ( <b>`[ ]`</b> ) and their elements and size can be changed, while tuples are enclosed in parentheses ( <b>`( )`</b> ) and cannot be updated. Tuples can be thought of as read-only lists. \n",
+    "The main differences between lists and tuples are: Lists are enclosed in brackets (__`[]`__) and their elements and size can be changed, while tuples are enclosed in parentheses (__`()`__) and cannot be updated. Tuples can be thought of as read-only lists. \n",
     "\n",
     "For example:"
    ]
@@ -490,7 +468,7 @@
    "source": [
     "Python's dictionaries are kind of hash table type. They work like associative arrays or hashes found in Perl and consist of key-value pairs. A dictionary key can be almost any Python type, but are usually numbers or strings. Values, on the other hand, can be any arbitrary Python object.\n",
     "\n",
-    "Dictionaries are enclosed by curly braces (<b>`{ }`</b>) and values can be assigned and accessed using square braces (<b>`[ ]`</b>). \n",
+    "Dictionaries are enclosed by curly braces (__`{}`__) and values can be assigned and accessed using square braces (__`[]`__). \n",
     "\n",
     "For example:"
    ]
