--- a/Beginner_2/6.2 Built-in Standard Data Types - Numbers.ipynb
+++ b/Beginner_2/6.2 Built-in Standard Data Types - Numbers.ipynb
@@ -8,7 +8,7 @@
     "\n",
     "Number data types store numeric values. They are immutable data types, means that changing the value of a number data type results in a newly allocated object.\n",
     "\n",
-    "Number objects are created when you assign a value to them −"
+    "Number objects are created when you assign a value to them:"
    ]
   },
   {
@@ -36,7 +36,7 @@
    "source": [
     "#### a. int (signed integers)\n",
     "\n",
-    "They are often called just integers or ints, are positive or negative whole numbers with <b>NO</b> decimal point."
+    "They are often called just integers or ints, are positive or negative whole numbers with __NO__ decimal point."
    ]
   },
   {
@@ -83,7 +83,7 @@
     "\n",
     "- This method returns smallest of its arguments.\n",
     "\n",
-    "For example −"
+    "For example:"
    ]
   },
   {
@@ -179,8 +179,8 @@
    "source": [
     "## 6.2.5 sqrt( )\n",
     "\n",
-    "- The method <b>`sqrt()`</b> returns the square root of <b>`x`</b> for <b>`x > 0`</b>.\n",
-    "- Note: This function is not accessible directly, so we need to import <b>`math`</b> module and then we need to call this function using <b>`math`</b> static object. <b><i>Will emphasize more on modules later on. </b></i>"
+    "- The method __`sqrt()`__ returns the square root of __`x`__ for __`x > 0`__.\n",
+    "- Note: This function is not accessible directly, so we need to import __`math`__ module and then we need to call this function using __`math`__ static object. ___Will emphasize more on modules later on. ___"
    ]
   },
   {
