--- a/Beginner_2/6.5 Built-in Standard Data Types - Tuples.ipynb
+++ b/Beginner_2/6.5 Built-in Standard Data Types - Tuples.ipynb
@@ -8,7 +8,7 @@
     "\n",
     "A tuple is a sequence of immutable Python objects. Tuples are sequences, just like lists. The differences between tuples and lists are, the tuples cannot be changed unlike lists and tuples use parentheses, whereas lists use square brackets.\n",
     "\n",
-    "Tuple is a Python data type that holds an <b>ordered</b> collection of values, which can be of any type. \n",
+    "Tuple is a Python data type that holds an __ordered__ collection of values, which can be of any type. \n",
     "\n",
     "Tuples can be expanded into variables easily. In assigning values, you may also ommit the paretheses. \n",
     "\n",
