--- a/Beginner_2/6.6 Built-in Standard Data Types - Dictionaries.ipynb
+++ b/Beginner_2/6.6 Built-in Standard Data Types - Dictionaries.ipynb
@@ -100,8 +100,8 @@
    },
    "outputs": [],
    "source": [
-    "my_dictionary = {}\n",
-    "new_dictionary = dict()"
+    "dictionary1 = {}\n",
+    "dictionary2 = dict()"
    ]
   },
   {
