--- a/Beginner_2/6.4 Built-in Standard Data Types - Lists .ipynb
+++ b/Beginner_2/6.4 Built-in Standard Data Types - Lists .ipynb
@@ -227,13 +227,22 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "x = ['P', 'y', 't', 'h', 'o','n']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
     "# Specifying start at the beginning and end at the second element\n",
-    "\n",
-    "x = ['P', 'y', 't', 'h', 'o','n']\n",
     "\n",
     "print(x[:2])"
    ]
@@ -248,8 +257,6 @@
    "source": [
     "# Specifying start at the next to last element and go to the end\n",
     "\n",
-    "x = ['P', 'y', 't', 'h', 'o','n']\n",
-    "\n",
     "print(x[-2:])"
    ]
   },
@@ -263,9 +270,14 @@
    "source": [
     "# Specifying start at the beginning and go to the next to last element\n",
     "\n",
-    "x = ['P', 'y', 't', 'h', 'o','n']\n",
-    "\n",
     "print(x[:-1])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "A third `step` parameter is optional. So the slice sytax is: `[start:stop[:step]]`."
    ]
   },
   {
@@ -281,6 +293,13 @@
     "x = ['P', 'y', 't', 'h', 'o','n']\n",
     "\n",
     "print(x[::2])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Slicing can be used to reverse a string on list by using a negative step:"
    ]
   },
   {
