--- a/Beginner_1/4. Operators and Delimiters.ipynb
+++ b/Beginner_1/4. Operators and Delimiters.ipynb
@@ -20,7 +20,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### ( + ) addition\n",
+    "### ( `+` ) addition\n",
     "\n",
     "Adds values on either side of the operator. "
    ]
@@ -44,7 +44,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### ( - ) subtraction\n",
+    "### ( `-` ) subtraction\n",
     "\n",
     "Subtracts right hand operand from left hand operand."
    ]
@@ -68,7 +68,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### ( * ) multiplication\n",
+    "### ( `*` ) multiplication\n",
     "\n",
     "Multiplies values on either side of the operator"
    ]
@@ -92,7 +92,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### ( / ) division\n",
+    "### ( `/` ) division\n",
     "\n",
     "Divides left hand operand by right hand operand"
    ]
@@ -116,9 +116,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### ( % ) modulus\n",
+    "### ( `%` ) modulus\n",
     "\n",
-    "Divides left hand operand by right hand operand and <b><i>returns the remainder</i></b>."
+    "Divides left hand operand by right hand operand and ___returns the remainder___."
    ]
   },
   {
@@ -140,9 +140,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### ( // ) Floor Division\n",
+    "### ( `//` ) floor division\n",
     "\n",
-    "Also known as the <i><b>integer division. </b></i> The division of operands will result to a quotient in which the digits after the decimal point are <b>removed</b>."
+    "Also known as the ___integer division___. The division of operands will result to a quotient in which the digits after the decimal point are __removed__."
    ]
   },
   {
@@ -162,9 +162,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### ( ** ) exponent\n",
+    "### ( `**` ) exponent\n",
     "\n",
-    "Performs <b><i>exponential (power)</i></b> calculation on operators."
+    "Performs ___exponential (power)___ calculation on operators."
    ]
   },
   {
@@ -194,11 +194,11 @@
     "## 4.1.2 Assignment Operators\n",
     "\n",
     "\n",
-    "### =  \n",
+    "### ( `=` ) equals\n",
     "\n",
     "Used for assigning the value of right operand to the left operand. \n",
     "\n",
-    "For example −"
+    "For example:"
    ]
   },
   {
@@ -259,7 +259,7 @@
     "\n",
     "Adds right operand to the left operand and assign the result to left operand. \n",
     "\n",
-    "For example −"
+    "For example:"
    ]
   },
   {
@@ -309,7 +309,7 @@
     "### ( `-=` ) subtract AND\n",
     "Subtracts the right operand from left and assigns subtraction to the left operand. \n",
     "\n",
-    "For example −"
+    "For example:"
    ]
   },
   {
@@ -360,7 +360,7 @@
     "\n",
     "Multiplies right operand with the left operand and assign the result to left operand.\n",
     "\n",
-    "For example −"
+    "For example:"
    ]
   },
   {
@@ -411,7 +411,7 @@
     "\n",
     "Divides left operand with the right operand and assign the result to left operand. \n",
     "\n",
-    "For example −"
+    "For example:"
    ]
   },
   {
@@ -461,7 +461,7 @@
     "### ( `%=` ) modulus AND\n",
     "Takes modulus using two operands and assign the result to left operand. \n",
     "\n",
-    "For example −"
+    "For example:"
    ]
   },
   {
@@ -511,7 +511,7 @@
     "### ( `**=` ) exponent AND\n",
     "Performs exponential (power) calculation on operators and assign value to the left operand. \n",
     "\n",
-    "For example −"
+    "For example:"
    ]
   },
   {
@@ -562,7 +562,7 @@
     "Performs floor division on operators and assign value to the left operand. \n",
     "> As discussed earlier, in floor division, the division of operands will result to a quotient in which the digits after the decimal point are removed.\n",
     "\n",
-    "For example −"
+    "For example:"
    ]
   },
   {
@@ -618,20 +618,20 @@
    "source": [
     "## 4.1.3 Boolean Operators\n",
     "\n",
-    "> <i>\"A boolean is like a light switch. It can only have two values. Just like a light switch can only be on or off, a boolean can only be True or False.\"</i>\n",
+    "> _\"A boolean is like a light switch. It can only have two values. Just like a light switch can only be on or off, a boolean can only be True or False.\"_\n",
     "\n",
-    "Below are the boolean operations in ascending priority −"
+    "Below are the boolean operations in ascending priority:"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### or\n",
+    "### `or`\n",
     "\n",
-    "It only evaluates the second argument if the first one is <b>False</b>.\n",
+    "It only evaluates the second argument if the first one is __False__.\n",
     "\n",
-    "<i>Go ahead if run the example below </i>−"
+    "Go ahead if run the example:"
    ]
   },
   {
@@ -656,21 +656,21 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "On the example above, the second condition which is the <b>color2 == \"orange\"</b> was no longer evaluated because the first condition was already satisfied. Always remember that in <b>\"or\"</b>, only one condition needs to be satisfied to make it True.\n",
+    "On the example above, the second condition which is the __color2 == \"orange\"__ was no longer evaluated because the first condition was already satisfied. Always remember that in __\"or\"__, only one condition needs to be satisfied to make it True.\n",
     "\n",
     "\n",
-    "<i>Try changing the first condition to see what will happen.</i>"
+    "Try changing the first condition to see what will happen."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### and\n",
+    "### `and`\n",
     "\n",
-    "It only evaluates the second argument if the first one is <b>True</b>\n",
+    "It only evaluates the second argument if the first one is __True__.\n",
     "\n",
-    "Try to run the example below −"
+    "Try to run the example below:"
    ]
   },
   {
@@ -692,16 +692,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "In <b>\"and\"</b>, both conditions should be met. If you change the conditions on the example above, none will be printed. Try it!  "
+    "In __\"and\"__, both conditions should be met. If you change the conditions on the example above, none will be printed. Try it!  "
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### not\n",
+    "### `not`\n",
     "\n",
-    "Using <b>\"not\"</b> before a boolean expression inverts it. For the example, run the code below."
+    "Using __\"not\"__ before a boolean expression inverts it. For the example, run the code below."
    ]
   },
   {
@@ -731,14 +731,14 @@
    "source": [
     "## 4.1.4 Membership Operators\n",
     "\n",
-    "Python’s membership operators test for membership in a sequence, such as strings, lists, or tuples. There are two membership operators −"
+    "Python’s membership operators test for membership in a sequence, such as strings, lists, or tuples. There are two membership operators:"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### in\n",
+    "### `in`\n",
     "\n",
     "Evaluates to true if it finds a variable in the specified sequence and false otherwise."
    ]
@@ -763,16 +763,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### not in\n",
+    "### `not in`\n",
     "\n",
-    "Evaluates to true if it does not finds a variable in the specified sequence and false otherwise. Basically, it is the opposite of '<i>in</i>' that was explained above."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "  "
+    "Evaluates to true if it does not finds a variable in the specified sequence and false otherwise. Basically, it is the opposite of '_in_' that was explained above."
    ]
   },
   {
@@ -796,6 +789,7 @@
    "metadata": {},
    "source": [
     "## 4.1.5 Identity Operators\n",
+    "\n",
     "They are used to check if two values (or variables) are located on the same part of the memory. Two variables that are equal does not imply that they are identical."
    ]
   },
@@ -803,7 +797,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### is\n",
+    "### `is`\n",
+    "\n",
     "Evaluates to True if the operands are identical (refer to the same object)"
    ]
   },
@@ -825,7 +820,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### is not\n",
+    "### `is not`\n",
     "\n",
     "Evaluates to True if the operands are not identical (do not refer to the same object)"
    ]
@@ -850,24 +845,32 @@
    "source": [
     "## 4.1.6 Comparison Operators\n",
     "\n",
-    "<i>\"These operators compare the values on either sides of them and decide the relation among them. They are also called Relational operators.\"</i>"
+    "> _\"These operators compare the values on either sides of them and decide the relation among them. They are also called Relational operators.\"_"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "###  == \n",
+    "###  `==` \n",
     "If the values of two operands are equal, then the condition becomes true. Print the code below to see the result."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n"
+     ]
+    }
+   ],
    "source": [
     "a = 2\n",
     "b = 2\n",
@@ -880,9 +883,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### !=\n",
+    "### `!=`\n",
     " \n",
-    "If values of two operands are <b>not equal</b>, then condition becomes true. For example:"
+    "If values of two operands are __not equal__, then condition becomes true. For example:"
    ]
   },
   {
@@ -903,8 +906,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### <>\n",
-    "If values of two operands are not equal, then condition becomes true. This is similar to the <b>!=</b> operator but is then deprecated in Python 3."
+    "### `<>`\n",
+    "\n",
+    "If values of two operands are not equal, then condition becomes true. This is similar to the __!=__ operator but is then deprecated in Python 3."
    ]
   },
   {
@@ -925,19 +929,19 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 4.1.7 Difference between is and == \n",
+    "## 4.1.7 Difference between `is` and `==`\n",
     "\n",
-    "### is  \n",
-    " - For <i>reference</i> equality. \n",
+    "### `is`\n",
+    " - For _reference_ equality. \n",
     " - Does not match values of the variables, but the instances themselves. \n",
-    " - This will return <b>True</b> if two variables point to the same object.\n",
+    " - This will return __True__ if two variables point to the same object.\n",
     "\n",
-    "### == \n",
-    " - For <i>value</i> equality. \n",
+    "### `==`\n",
+    " - For _value_ equality. \n",
     " - Use it when you would like to know if two objects have the same value.\n",
     " - Will return true if the objects referred to by the variables are equal.\n",
     "\n",
-    "For example −"
+    "For example:"
    ]
   },
   {
