--- a/Beginner_2/5. Built-in Functions.ipynb
+++ b/Beginner_2/5. Built-in Functions.ipynb
@@ -63,7 +63,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "It's possible to redefine the separator between values by assigning an arbitrary string to the keyword parameter __`\"sep\"`__:"
+    "It's possible to redefine the separator between values by assigning an arbitrary string to the keyword parameter \"__`sep`__\":"
    ]
   },
   {
