--- a/Beginner_2/6 Variables.ipynb
+++ b/Beginner_2/6 Variables.ipynb
@@ -34,7 +34,7 @@
    "source": [
     "#### Exercise: \n",
     "\n",
-    "(1) Create a variable named __'`c`'__ and assign the value 'Grapes'\n",
+    "(1) Create a variable named \"__`c`__\" and assign the value 'Grapes'\n",
     "\n",
     "(2) Print __`c`__"
    ]
@@ -309,7 +309,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "- Subsets of an [iterable](https://wiki.python.org/moin/Iterator) can be taken using the slice operator (__`[:]`__) with indexes starting at 0 in the beginning of the string and working their way to -1 at the end. Strings, as well as lists, and sets are subscriptable iterables. Slicing creates copies of them. We'll take a deeper look at slicing later in lists.\n",
+    "- Subsets of an [iterable](https://wiki.python.org/moin/Iterator) can be taken using the slice operator (__`[:]`__) with indexes starting at 0 in the beginning of the string and working their way to -1 at the end. Strings, as well as lists, and sets are subscriptable iterables. Slicing creates copies of it. We'll take a deeper look at slicing later.\n",
     "\n",
     "For example:"
    ]
