--- a/Beginner_2/6.1 Built-in Standard Data Types - Booleans.ipynb
+++ b/Beginner_2/6.1 Built-in Standard Data Types - Booleans.ipynb
@@ -32,17 +32,17 @@
    "source": [
     "## 6.1.1 Booleans and Logical Operators\n",
     "\n",
-    "Boolean values respond to logical operators <b>and</b> / <b>or</b>. For example −\n",
+    "Boolean values respond to logical operators __and__ / __or__. For example:\n",
     "\n",
-    "True <b>`and`</b> False = False\n",
+    "True __`and`__ False = False\n",
     "\n",
-    "True <b>`and`</b> True = True\n",
+    "True __`and`__ True = True\n",
     "\n",
-    "False <b>`and`</b> True = False\n",
+    "False __`and`__ True = False\n",
     "\n",
-    "False <b>`or`</b> True = True\n",
+    "False __`or`__ True = True\n",
     "\n",
-    "False <b>`or`</b> False = False"
+    "False __`or`__ False = False"
    ]
   },
   {
