--- a/Beginner_2/6.2 Built-in Standard Data Types - Numbers.ipynb
+++ b/Beginner_2/6.2 Built-in Standard Data Types - Numbers.ipynb
@@ -119,7 +119,7 @@
     "## 6.2.3 max( )\n",
     "\n",
     "- The method max returns the elements from the list with maximum value.\n",
-    "- <b>`max`</b> will return elements from the list with maximum value."
+    "- __`max`__ will return elements from the list with maximum value."
    ]
   },
   {
@@ -153,7 +153,8 @@
    "metadata": {},
    "source": [
     "## 6.2.4 abs( )\n",
-    "- The method abs() returns absolute value of x - the (positive) distance between x and zero.\n",
+    "\n",
+    "- The function `abs()` returns absolute value of `x` - the (positive) distance between x and zero.\n",
     "- This method returns absolute value."
    ]
   },
@@ -179,7 +180,7 @@
    "source": [
     "## 6.2.5 sqrt( )\n",
     "\n",
-    "- The method __`sqrt()`__ returns the square root of __`x`__ for __`x > 0`__.\n",
+    "- The function __`sqrt()`__ returns the square root of __`x`__ for __`x > 0`__.\n",
     "- Note: This function is not accessible directly, so we need to import __`math`__ module and then we need to call this function using __`math`__ static object. ___Will emphasize more on modules later on. ___"
    ]
   },
@@ -200,7 +201,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "See more Mathematical Functions here on the [Official Python Documentation](https://docs.python.org/3/library/math.html)."
+    "See more Mathematical Functions in the [Official Python Documentation](https://docs.python.org/3/library/math.html)."
    ]
   }
  ],
