--- a/Beginner_2/6.3 Built-in Standard Data Types - Strings.ipynb
+++ b/Beginner_2/6.3 Built-in Standard Data Types - Strings.ipynb
@@ -76,7 +76,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "You may escape the apostrophe (<b> `'` </b>) using a backslash (<b> `\\` </b>) as seen on the example above. "
+    "You may escape the apostrophe (__`'`__) using a backslash (__`\\`__) as seen on the example above. "
    ]
   },
   {
@@ -85,9 +85,9 @@
    "source": [
     "## 6.3.2 Escape characters\n",
     "\n",
-    "This <b>`\\`</b> (backslash) character, as seen on the previous example, is used to escape characters that otherwise have a special meaning, such as newline, backslash itself, or the quote character.\n",
+    "This __`\\`__ (backslash) character, as seen on the previous example, is used to escape characters that otherwise have a special meaning, such as newline, backslash itself, or the quote character.\n",
     "\n",
-    "An important escape sequence is to escape a single-quote <b>`'`</b> or double-quote <b>`\"`</b>. Imagine you have a string that uses double-quotes and you want to put a double-quote inside the string.\n",
+    "An important escape sequence is to escape a single-quote __`'`__ or double-quote __`\"`__. Imagine you have a string that uses double-quotes and you want to put a double-quote inside the string.\n",
     "\n",
     "To solve this problem you escape double-quotes and single-quotes so Python knows to include in the string. For example:"
    ]
@@ -196,11 +196,11 @@
     "\n",
     "Here are a few useful methods for strings:\n",
     "\n",
-    "#### a. `.upper()` and `.lower()` \n",
+    "### `.upper()` and `.lower()` \n",
     "- Performing the __`.upper()`__ method on a string converts all of the characters to uppercase;\n",
     "- Performing the __`.lower()`__ method converts all of the characters to lowercase.\n",
     "\n",
-    "For example −"
+    "For example:"
    ]
   },
   {
@@ -247,11 +247,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### b. `.count()`\n",
+    "### `.count()`\n",
     "\n",
     "The __`.count()`__ method adds up the number of times a character or sequence of characters appears in a string.\n",
     "\n",
-    "For example −"
+    "For example:"
    ]
   },
   {
@@ -277,11 +277,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### c. `.find()`\n",
+    "### `.find()`\n",
     "\n",
     "We use __`.find()`__ to search for a specific character/s in a string.\n",
     "\n",
-    "For example −"
+    "For example:"
    ]
   },
   {
@@ -309,14 +309,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### d. `.replace()`\n",
+    "### `.replace()`\n",
     "\n",
     "The method __`replace()`__ returns a copy of the string in which the occurrences of old have been replaced with new, optionally restricting the number of replacements to max. \n",
     "\n",
     "##### Syntax \n",
+    "\n",
     "`str.replace(old, new[, max])`\n",
     "\n",
     "##### Parameters \n",
+    "\n",
     "- old -- This is old substring to be replaced.\n",
     "\n",
     "- new -- This is new substring, which would replace old substring.\n",
@@ -324,6 +326,7 @@
     "- max -- If this optional argument max is given, only the first count occurrences are replaced.\n",
     "\n",
     "##### Return Value\n",
+    "\n",
     "This method returns a copy of the string with all occurrences of substring old replaced by new. If the optional argument max is given, only the first count occurrences are replaced.\n",
     "\n",
     "For example:"
@@ -347,13 +350,13 @@
    "source": [
     "## 6.3.4 String Formatting \n",
     "\n",
-    "The string format operator ( <b>`%`</b> ) is unique to strings and makes up for the pack of having functions from C's `printf()`.\n",
+    "The string format operator (__`%`__) is unique to strings and makes up for the pack of having functions from C's `printf()`.\n",
     "\n",
     "Simple positional formatting is probably the most common use-case. Use it if the order of your arguments is not likely to change and you only have very few elements you want to concatenate.\n",
     "\n",
     "Since the elements are not represented by something as descriptive as a name this simple style should only be used to format a relatively small number of elements.\n",
     "\n",
-    "For example −"
+    "For example:"
    ]
   },
   {
@@ -371,7 +374,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Note that we used <b>`%s`</b> for string.\n",
+    "Note that we used __`%s`__ for string.\n",
     "\n",
     "Here's another example:"
    ]
@@ -410,7 +413,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## .format()\n",
+    "### .format()\n",
     "\n",
     "With new style formatting it is possible to give placeholders an explicit positional index.\n",
     "This allows for re-arranging the order of display without changing the arguments."
