--- a/Beginner_2/6.4 Built-in Standard Data Types - Lists .ipynb
+++ b/Beginner_2/6.4 Built-in Standard Data Types - Lists .ipynb
@@ -100,8 +100,9 @@
    "source": [
     "## 6.4.2 Methods\n",
     "\n",
-    "### len()\n",
-    "Using <b>`len( )`</b> returns the number of top-level items contained in the object being queried. For the example, run the code below −"
+    "### `len()`\n",
+    "\n",
+    "Using __`len( )`__ returns the number of top-level items contained in the object being queried. For the example, run the code below:"
    ]
   },
   {
@@ -121,9 +122,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### index()\n",
+    "### `index()`\n",
     "\n",
-    "The method `index()` returns the <b>lowest index</b> in list. For example:"
+    "The method `index()` returns the __lowest index__ in list. For example:"
    ]
   },
   {
@@ -143,9 +144,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### append()\n",
+    "### `append()`\n",
     "\n",
-    "The method <b>`append()`</b> appends a passed <i>obj</i> into the existing list. This method does not return any value but updates existing list. \n",
+    "The method __`append()`__ appends a passed __obj__ into the existing list. This method does not return any value but updates existing list. \n",
     "\n",
     "A list doesn't have to have a fixed length. You can add items to the end of a list any time you like."
    ]
@@ -169,9 +170,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### delete()\n",
+    "### `delete()`\n",
     "\n",
-    "To remove a list element, you can use either the <b>`del`</b> statement if you know exactly which element(s) you are deleting or the <b>`remove()`</b> method if you are uncertain."
+    "To remove a list element, you can use either the <b>`del`</b> statement if you know exactly which element(s) you are deleting or the __`remove()`__ method if you are uncertain."
    ]
   },
   {
@@ -192,9 +193,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### remove() \n",
+    "### `remove() `\n",
     "\n",
-    "This method does not return any value but removes the given object from the list. For example −"
+    "This method does not return any value but removes the given object from the list. For example:"
    ]
   },
   {
@@ -216,7 +217,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 6.4.3 List slicing\n",
+    "## 6.4.3 Slicing\n",
     "\n",
     "One way to remember how slices work is to think of the indices as pointing between characters, with the left edge of the first character numbered 0. Then the right edge of the last character of a string of n characters has index n:\n",
     "\n",
@@ -299,7 +300,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Slicing can be used to reverse a string on list by using a negative step:"
+    "Slicing can accept negative indices. By providing a negative step, it can reverse a string or list:"
    ]
   },
   {
