--- a/Beginner_2/6.6 Built-in Standard Data Types - Dictionaries.ipynb
+++ b/Beginner_2/6.6 Built-in Standard Data Types - Dictionaries.ipynb
@@ -259,7 +259,7 @@
    "source": [
     "## 6.6.4 Deleting Entries\n",
     "\n",
-    "Items can be removed from a dictionary with the __`del`__ command. \n",
+    "Items can be removed from a dictionary with the __`del`__ statement.\n",
     "\n",
     "Here's the syntax:"
    ]
@@ -311,7 +311,7 @@
    "source": [
     "## 6.6.5 Other methods\n",
     "\n",
-    "### a. len( )\n",
+    "### `len( )`\n",
     "\n",
     "The length of a dictionary is the number of key-value pairs it has. Each pair counts only __once__, even if the value is a list."
    ]
@@ -335,7 +335,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### b. str( )\n",
+    "### `str( )`\n",
     "\n",
     "Produces a printable string representation of a dictionary."
    ]
@@ -359,7 +359,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### c. dict.keys()\n",
+    "### `dict.keys()`\n",
     "\n",
     "Returns list of the dictonary's keys."
    ]
@@ -381,7 +381,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### d. dict.values()\n",
+    "### `dict.values()`\n",
     "\n",
     "Returns a list of the dictionary's values."
    ]
